ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: capstone.favourbiz.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: front-end
                port:
                  number: 80
  tls:
    - hosts:
      - capstone.favourbiz.online
      secretName: secret-tls
